# HUI-2.0

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  readme.md
.cache/clangd/index/: PacketProcessor.cpp.F074971956B653FD.idx  PacketProcessor.h.D2DA3B871CEB7C5D.idx  SerialPort.cpp.BFDD96B889889008.idx  SerialPort.h.8C9BEFB26F795F6E.idx  main.cpp.BDFB2CB835C753B4.idx
include/data/: PacketProcessor.h
include/serial/: SerialPort.h
src/: main.cpp
src/data/: PacketProcessor.cpp
src/serial/: SerialPort.cpp
